--- a/Client-side Form Validation/form.html
+++ b/Client-side Form Validation/form.html
@@ -20,28 +20,28 @@
         <form id="form" class="form">
             <div class="form-control">
                 <label for="username">Username</label>
-                <input type="text" placeholder="florinpop17" id="username" />
+                <input type="text" placeholder="abc123" id="username" />
                 <i class="fa fa-check-circle"></i>
                 <i class="fa fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
             <div class="form-control">
                 <label for="username">Email</label>
-                <input type="email" placeholder="a@florin-pop.com" id="email" />
+                <input type="email" placeholder="abc123@gmail.com" id="email" />
                 <i class="fa fa-check-circle"></i>
                 <i class="fa fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
             <div class="form-control">
                 <label for="username">Password</label>
-                <input type="password" placeholder="Password" id="password" />
+                <input type="password" placeholder="Input Password" id="password" />
                 <i class="fa fa-check-circle"></i>
                 <i class="fa fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
             <div class="form-control">
                 <label for="username">Password check</label>
-                <input type="password" placeholder="Password two" id="password2" />
+                <input type="password" placeholder="Confirm Password" id="password2" />
                 <i class="fa fa-check-circle"></i>
                 <i class="fa fa-exclamation-circle"></i>
                 <small>Error message</small>
